--- a/src/components/Loader2/index.scss
+++ b/src/components/Loader2/index.scss
@@ -1,6 +1,8 @@
 @import "styles/global.scss";
 .loader-container {
 	position: absolute;
+	top: 0;
+	left: 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
