--- a/src/components/Cards/HouseCard/index.scss
+++ b/src/components/Cards/HouseCard/index.scss
@@ -11,6 +11,7 @@
 		border-radius: 24px;
 		margin-bottom: 12px;
 		border-bottom: 1px solid #d5d5d5;
+		overflow: hidden;
 
 		&__header {
 			width: 100%;
@@ -72,7 +73,10 @@
 			justify-content: space-between;
 			align-items: center;
 			padding: 32px 24px;
+			flex-wrap: wrap;
+			// text-align: center;
 			&__price {
+				flex: 1 1 50px;
 				span {
 					font-size: 1.285rem;
 					color: #5d5d5d;
