--- a/src/components/FilterTable/index.scss
+++ b/src/components/FilterTable/index.scss
@@ -3,6 +3,7 @@
 	position: relative;
 	display: inline-block;
 	.filter-list {
+		margin-top: 20px;
 		position: absolute;
 		top: 70%;
 		left: 0;
@@ -13,6 +14,7 @@
 		background-color: $white-color;
 		padding: 1rem;
 		border-radius: 12px;
+		z-index: 50;
 		transition: all 100ms ease-in-out;
 		transform-origin: top;
 	}
