--- a/src/components/FilterTable/index.scss
+++ b/src/components/FilterTable/index.scss
@@ -7,7 +7,8 @@
 		position: absolute;
 		top: 70%;
 		left: 0;
-		width: 300px;
+		width: fit-content;
+		min-width: 300px;
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
@@ -17,6 +18,7 @@
 		z-index: 50;
 		transition: all 100ms ease-in-out;
 		transform-origin: top;
+		box-shadow: $box-shadow;
 	}
 	.show {
 		// display: flex;
