--- a/src/components/ReusableTable/index.scss
+++ b/src/components/ReusableTable/index.scss
@@ -45,6 +45,7 @@
 			border-width: 0 !important;
 			border-color: #2b2b40;
 			border-collapse: collapse !important;
+			white-space: nowrap;
 			.thead {
 				vertical-align: bottom;
 				border-style: solid;
